--- a/Aqua.FileValidationExtensions/Aqua.FileValidationExtensions.csproj
+++ b/Aqua.FileValidationExtensions/Aqua.FileValidationExtensions.csproj
@@ -1,7 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>Is an Open Source and Free Software package to facilitate dealing with File properties, It supports all .NET Core versions as well as .NET Framework 4.6.1+</Description>
+    <Authors>Useme Alehosaini</Authors>
+    <Company />
+    <PackageProjectUrl>https://ualehosaini.github.io/aqua-file-validation-extensions</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ualehosaini/Aqua.FileValidationExtensions</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>file system attribute properties validations</PackageTags>
+    <InludeSymbols>true</InludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <Version>1.0.1</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
